# spherical_collection

./: CMakeLists.txt
examples/: CMakeLists.txt  basic.cpp
include/: CMakeLists.txt  functions.h
